<resources>
    <string name="app_name">Farm-Fun</string>
    <string name="test">Test</string>
    <string name="orderTomorrow">可订明日</string>
    <string name="yuan">元</string>
    <string name="zhuo">桌</string>
    <string name="remain">还剩</string>
    <string name="seat_detail">公告：中饭时间：10：30至13：30；\n&#160;&#160;&#160;&#160;&#160;&#160;晚饭时间：16：30至19：30</string>
    <string name="room_detail">公告：最迟退房12：00；最早入住14：00；\n每个房间赠双早</string>
    <string name="chosen">已选择：</string>
    <string name="lunch_dinner">（中饭/晚饭）</string>
    <string name="physical_store_price">门市价</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="order">预定</string>
    <string name="pay_online">在线付</string>
    <string name="comment">评论</string>
    <string name="cancel">取消</string>
    <string name="chose_date">请选择入住离店时间</string>
    <string name="Monday">Mon.</string>
    <string name="Tuesday">Tue.</string>
    <string name="Wednesday">Wed.</string>
    <string name="Thursday">Thu.</string>
    <string name="Friday">Fri.</string>
    <string name="Saturday">Sat.</string>
    <string name="Sunday">Sun.</string>
    <string name="year2019">2019年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="symbol_yuan">¥</string>
    <string name="remark">备注</string>
    <string name="payment">支付方式</string>
    <string name="payment_online">线上支付</string>
    <string name="submit_order">提交订单></string>
    <string name="total_account">总计</string>
    <string name="none">无</string>
    <string name="input_remark">请输入备注……</string>
    <string name="finish">完成</string>
    <string name="ticket">门票</string>
    <string name="count">数量</string>
    <string name="tourist">游客（注册/登录）</string>
</resources>
