<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDark">

    <Button
        android:id="@+id/submit"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorTheme"
        android:text="@string/submit_order"
        android:textSize="14sp"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/total_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_account"
        android:textSize="12sp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/price"
        />
    <TextView
        android:id="@+id/yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_yuan"
        android:textSize="12sp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@id/total_account"
        app:layout_constraintBottom_toBottomOf="@id/price"
        android:layout_marginStart="10dp"

        />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:text="@string/test"
        app:layout_constraintStart_toEndOf="@id/yuan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        />

</android.support.constraint.ConstraintLayout>