<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorTheme"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/choseDate"
        app:layout_constraintBottom_toBottomOf="@id/choseDate"
        android:background="#ffffff"
        />
    <TextView
        android:id="@+id/choseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_date"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />
    <ImageView
        android:id="@+id/cutPanel"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorLineGray"
        app:layout_constraintTop_toBottomOf="@id/choseDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

    <android.support.constraint.Guideline
        android:id="@+id/oneEighth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.125"
        android:orientation="vertical"
        />
    <android.support.constraint.Guideline
        android:id="@+id/twoEighth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical"
        />
    <android.support.constraint.Guideline
        android:id="@+id/threeEighth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.375"
        android:orientation="vertical"
        />
    <android.support.constraint.Guideline
        android:id="@+id/fiveEighth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.625"
        android:orientation="vertical"
        />
    <android.support.constraint.Guideline
        android:id="@+id/sixEighth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="vertical"
        />
    <android.support.constraint.Guideline
        android:id="@+id/sevenEighth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.875"
        android:orientation="vertical"
        />
    <TextView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sunday"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/oneEighth"
        app:layout_constraintEnd_toEndOf="@id/oneEighth"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />
    <TextView
        android:id="@+id/mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Monday"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/twoEighth"
        app:layout_constraintEnd_toEndOf="@id/twoEighth"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />
    <TextView
        android:id="@+id/tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/threeEighth"
        app:layout_constraintEnd_toEndOf="@id/threeEighth"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />

    <TextView
        android:id="@+id/wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />

    <TextView
        android:id="@+id/thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thursday"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/fiveEighth"
        app:layout_constraintEnd_toEndOf="@id/fiveEighth"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />
    <TextView
        android:id="@+id/fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/sixEighth"
        app:layout_constraintEnd_toEndOf="@id/sixEighth"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />
    <TextView
        android:id="@+id/sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saturday"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/sevenEighth"
        app:layout_constraintEnd_toEndOf="@id/sevenEighth"
        app:layout_constraintTop_toTopOf="@id/cutPanel"
        app:layout_constraintBottom_toBottomOf="@id/cutPanel"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/timeChoseRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cutPanel"
        />




</android.support.constraint.ConstraintLayout>