<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/seatPic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/wh11pic" />

    <ImageView
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/seatPic"
        app:layout_constraintEnd_toEndOf="@id/seatPic"
        app:layout_constraintTop_toTopOf="@id/seatPic"
        app:layout_constraintBottom_toBottomOf="@id/seatPic"
        android:src="@drawable/frame" />

    <TextView
        android:id="@+id/seatType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/seatPic"
        android:layout_marginStart="18dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/seatType"
        app:layout_constraintBottom_toBottomOf="@id/seatType"
        app:layout_constraintStart_toEndOf="@id/seatType"
        android:text="@string/test"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/remainSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toEndOf="@id/remain"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@id/remain"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remain"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toStartOf="@id/seatType"
        app:layout_constraintTop_toBottomOf="@id/seatType"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/seatType"
        android:textColor="@color/colorTextGray"
        android:textSize="12sp"
        android:text="@string/test"
        app:layout_constraintBottom_toBottomOf="@id/seatPic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zhuo"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toEndOf="@id/remainSeats"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@id/remainSeats"
        app:layout_constraintTop_toTopOf="@id/remainSeats"
        app:layout_constraintVertical_bias="0.8"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorLineGray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/order"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:textColor="#ffffff"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shape_order"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/payOnline"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:text="@string/pay_online"
        android:textSize="12sp"
        android:textColor="@color/colorTheme"
        android:background="@drawable/shape_payonline"
        app:layout_constraintTop_toBottomOf="@id/order"
        app:layout_constraintStart_toStartOf="@id/order"
        app:layout_constraintEnd_toEndOf="@id/order" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/seatPic"
        app:layout_constraintBottom_toBottomOf="@id/seatPic"
        android:text="20"
        android:textColor="@color/colorRemind"
        android:textSize="24sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/payOnline"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/symbol_yuan"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintBottom_toBottomOf="@id/price"
        android:layout_marginEnd="5dp"
        />
</android.support.constraint.ConstraintLayout>