<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">
    <TextView
        android:id="@+id/ticketType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />
    <TextView
        android:id="@+id/orderTomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_ordertomorrow"
        app:layout_constraintStart_toStartOf="@id/ticketType"
        app:layout_constraintTop_toBottomOf="@id/ticketType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/orderTomorrow"
        android:textColor="@color/colorTheme"
        />
    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toEndOf="@id/orderTomorrow"
        app:layout_constraintTop_toTopOf="@id/orderTomorrow"
        />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        android:textColor="@color/colorRemind"
        android:textSize="24sp"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuan"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"
        app:layout_constraintVertical_bias="0.8"
        android:textSize="12sp"
        />

</android.support.constraint.ConstraintLayout>