<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    >

    <TextView
        android:id="@+id/ticketType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />
    <TextView
        android:id="@+id/orderTomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_tip"
        app:layout_constraintStart_toStartOf="@id/ticketType"
        app:layout_constraintTop_toBottomOf="@id/ticketType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:text=" 可订明日 "
        android:textColor="@color/colorTheme"
        android:textSize="12sp"
        />
    <TextView
        android:id="@+id/refundAnyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_tip"
        app:layout_constraintStart_toEndOf="@id/orderTomorrow"
        app:layout_constraintTop_toBottomOf="@id/ticketType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:text=" 随时退 "
        android:textColor="@color/colorTheme"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toEndOf="@id/refundAnyTime"
        android:layout_marginStart="3dp"
        app:layout_constraintTop_toTopOf="@id/orderTomorrow"
        app:layout_constraintBottom_toBottomOf="@id/orderTomorrow"
        />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/payOnline"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorRemind"
        android:textSize="24sp"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_yuan"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintBottom_toBottomOf="@id/price"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="3dp"
        android:textSize="12sp"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorLineGray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/order"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:textColor="#ffffff"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shape_order"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:id="@+id/payOnline"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:text="@string/pay_online"
        android:textSize="12sp"
        android:textColor="@color/colorTheme"
        android:background="@drawable/shape_payonline"
        app:layout_constraintTop_toBottomOf="@id/order"
        app:layout_constraintStart_toStartOf="@id/order"
        app:layout_constraintEnd_toEndOf="@id/order"
        />

</android.support.constraint.ConstraintLayout>