<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:id="@+id/roomItem">

    <!--<ImageView-->
        <!--android:id="@+id/roomPic"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="70dp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--android:layout_marginStart="10dp"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:src="@drawable/wh11pic"-->
        <!--/>-->
    <!--<ImageView-->
        <!--android:id="@+id/frame"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintStart_toStartOf="@id/seatPic"-->
        <!--app:layout_constraintEnd_toEndOf="@id/seatPic"-->
        <!--app:layout_constraintTop_toTopOf="@id/seatPic"-->
        <!--app:layout_constraintBottom_toBottomOf="@id/seatPic"-->
        <!--android:src="@drawable/frame"-->
        <!--/>-->
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/roomPic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        fresco:placeholderImage="@drawable/placeholder"
        fresco:placeholderImageScaleType="fitCenter"
        />

    <TextView
        android:id="@+id/roomType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/test"
        app:layout_constraintStart_toEndOf="@id/roomPic"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/roomPic"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="12sp"
        android:textColor="@color/colorTextGray"
        app:layout_constraintStart_toStartOf="@id/roomType"
        app:layout_constraintTop_toBottomOf="@id/roomType"
        />
    <TextView
        android:id="@+id/bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextGray"
        android:text="@string/test"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/describe"
        app:layout_constraintStart_toStartOf="@id/describe"
        />

    <TextView
        android:id="@+id/roomRemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bed"
        app:layout_constraintStart_toStartOf="@id/roomType"
        android:textColor="@color/colorTextGray"
        android:text="@string/test"
        android:textSize="12sp"
        />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRemind"
        android:textSize="24sp"
        android:text="@string/test"
        app:layout_constraintEnd_toStartOf="@id/yuan"
        app:layout_constraintTop_toTopOf="@id/roomPic"
        app:layout_constraintBottom_toBottomOf="@id/roomPic"
        android:layout_marginEnd="2dp"
        />
    <TextView
        android:id="@+id/yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextGray"
        android:textSize="14sp"
        android:text="@string/yuan"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintEnd_toStartOf="@id/onlineShop"
        android:layout_marginEnd="10dp"
        />
    <TextView
        android:id="@+id/physicalStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextGray"
        android:textSize="12sp"
        android:text="@string/physical_store_price"
        app:layout_constraintEnd_toStartOf="@id/physicalStorePrice"
        app:layout_constraintTop_toTopOf="@id/physicalStorePrice"
        app:layout_constraintBottom_toBottomOf="@id/physicalStorePrice"
        />
    <TextView
        android:id="@+id/physicalStorePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextGray"
        android:textSize="12sp"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="@id/yuan"
        app:layout_constraintTop_toBottomOf="@id/yuan"
        android:layout_marginTop="1dp"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorLineGray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/onlineShop"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:textColor="#ffffff"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shape_order"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:id="@+id/payOnline"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:text="@string/pay_online"
        android:textSize="12sp"
        android:textColor="@color/colorTheme"
        android:background="@drawable/shape_payonline"
        app:layout_constraintTop_toBottomOf="@id/onlineShop"
        app:layout_constraintStart_toStartOf="@id/onlineShop"
        app:layout_constraintEnd_toEndOf="@id/onlineShop"
        />
</android.support.constraint.ConstraintLayout>