<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorBackgroundGray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cutGuideLine"
        >

        <ImageView
            android:id="@+id/timeChosePanel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/shape_panel_top"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/test"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/chosen"
            app:layout_constraintBottom_toBottomOf="@id/chosenDate"
            app:layout_constraintEnd_toStartOf="@id/chosenDate"
            android:layout_marginEnd="3dp"
            android:textColor="@color/colorTextGray"
            />
        <TextView
            android:id="@+id/chosenDate"
            android:text="@string/test"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/cutGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/notice"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toStartOf="@id/seatDetail"
        app:layout_constraintTop_toTopOf="@id/seatDetail"
        app:layout_constraintBottom_toBottomOf="@id/seatDetail"
        android:src="@drawable/notice"
        android:layout_marginEnd="3dp"
        />

    <TextView
        android:id="@+id/seatDetail"
        android:text="@string/seat_detail"
        android:textSize="13sp"
        android:textColor="@color/colorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cutGuideLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        />

</android.support.constraint.ConstraintLayout>